added a label tag

--- a/exercicio.html
+++ b/exercicio.html
@@ -9,14 +9,16 @@
   <body>
     <h1>Formulário de Cadastro</h1>
     <form>
-      <input type="text" placeholder="Nome completo" />
+      <label for="nama">Nome</label>
+      <input type="text" id="Nome" />
       <br />
-      <input type="email" placeholder="E-mail" />
+      <label for="email">E-mail</label>
+      <input type="email" id="E-mail" />
       <br />
-      <input type="Senha" placeholder="Senha" />
+      <label for="password">Senha</label>
+      <input type="password" id="password" />
       <br />
       <button type="submit">Enviar</button>
-      <button type="reset">Limpar</button>
     </form>
   </body>
 </html>
